<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    android:orientation="vertical"
    tools:context=".Auth.SignInActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/back_drawable"
        app:tint="@android:color/background_dark"
        android:padding="5dp"
        android:onClick="backOnClick"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/background_dark"
        android:text="Enter mobile number"
        android:singleLine="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="25dp"
        android:weightSum="7"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/in"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/indian_phone_code"
            android:gravity="center"
            android:textSize="16sp"
            android:paddingStart="5dp"
            android:paddingEnd="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="phone"
            android:hint="@string/phone_number"
            android:background="@android:color/background_light"
            android:textSize="16sp"
            android:padding="10dp"
            android:textColor="@android:color/background_dark"
            android:imeOptions="actionDone"
            android:id="@+id/signInPhoneNumberEditText"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:text="@string/terms_policy"
        android:textSize="12sp"
        android:id="@+id/termsAndPoliciesTextView"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/auth_button_drawable"
        android:backgroundTint="@color/color_yellow"
        android:text="@string/move_ahead"
        android:textSize="16sp"
        android:onClick="doneOnClick"/>

</LinearLayout>