<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ParkingLocationsActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="10dp"
        android:weightSum="10"
        android:id="@+id/linearLayout"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:src="@drawable/navigation_menu_drawable"
            app:tint="@android:color/black"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:layout_marginHorizontal="5dp"
            android:elevation="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="2dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/circular_drawable"
                android:backgroundTint="@color/color_yellow"
                android:src="@android:drawable/ic_menu_search"
                android:elevation="7dp"
                android:layout_centerVertical="true"/>

            <SearchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:queryHint="Search address"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:elevation="5dp"
                android:iconifiedByDefault="false"
                android:focusableInTouchMode="true"
                android:background="@drawable/circular_drawable"
                android:id="@+id/searchAddressEditText"/>

        </RelativeLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/share_drawable"
            app:tint="@android:color/black"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:src="@drawable/notification_drawable"
            app:tint="@android:color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/vehicleOptionLinearLayout"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/car_drawable"
            app:tint="#FF0000"
            android:background="@drawable/vehicle_options_circular_drawable"
            android:padding="10dp"
            android:layout_marginEnd="5dp"
            android:elevation="5dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/motorcycle_drawable"
            app:tint="#FF0000"
            android:background="@drawable/vehicle_options_circular_drawable"
            android:padding="10dp"
            android:layout_marginHorizontal="5dp"
            android:elevation="5dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cycle_drawable"
            app:tint="#FF0000"
            android:background="@drawable/vehicle_options_circular_drawable"
            android:padding="10dp"
            android:layout_marginEnd="5dp"
            android:elevation="5dp"/>

    </LinearLayout>
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/vehicleOptionLinearLayout"
        android:layout_marginTop="25sp"
        android:layout_marginEnd="25sp"
        android:src="@drawable/filter_drawable"
        android:elevation="5dp"
        android:background="@drawable/circular_drawable"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginEnd="25dp"
                android:src="@drawable/my_location_drawable"
                app:tint="@android:color/black"
                android:scaleType="fitXY"
                android:layout_alignParentEnd="true"
                android:background="@drawable/circular_drawable"
                android:elevation="5dp"
                android:layout_marginBottom="25dp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:background="@android:color/background_light"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/home_drawable"
                app:drawableTint="@android:color/black"
                android:textAllCaps="false"
                android:text="@string/home"
                android:singleLine="true"
                android:textSize="12sp"
                android:background="@android:color/background_light"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/event_booking_drawable"
                app:drawableTint="@android:color/black"
                android:textAllCaps="false"
                android:text="@string/my_bookings"
                android:singleLine="true"
                android:textSize="12sp"
                android:background="@android:color/background_light"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/person_add_drawable"
                app:drawableTint="@android:color/black"
                android:textAllCaps="false"
                android:text="@string/invite_friends"
                android:singleLine="true"
                android:textSize="12sp"
                android:background="@android:color/background_light"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/settings_drawable"
                app:drawableTint="@android:color/black"
                android:textAllCaps="false"
                android:text="@string/settings"
                android:singleLine="true"
                android:textSize="12sp"
                android:background="@android:color/background_light"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
